# tokenizer-expirment

./: .gitignore  PLAN.md  README.md  pyproject.toml
configs/data/: sample.json  wikitext103_train_subset.json  wikitext103_validation_subset.json
data/: sample_corpus.txt
scripts/: run_paper_reproduction.sh  run_wmt14_reproduction.sh
src/experiment/: analyze_tokenizers.py  common.py  evaluate_clm.py  evaluate_translation.py  import_hf_dataset.py  import_wmt14.py  preprocess.py  preprocess_translation.py  reference_bpe.py  train_clm.py  train_tokenizer.py  train_translation.py  transformer_translation.py  translation_data.py  verify_tokenizer.py
src/prefix_tokenizer/: __init__.py  builder_corpus.py  builder_memoryless.py  framing.py  hf_adapter.py  serialization.py  tokenizer.py  tree.py
tests/: test_analyze_tokenizers.py  test_common.py  test_framing.py  test_reference_bpe.py  test_roundtrip.py  test_serialization.py  test_train_clm.py  test_translation.py  test_tree_invariants.py  test_unique_sequences.py
