[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tokenizer-expirment"
version = "0.1.0"
description = "Compression-tree tokenizer experiments"
requires-python = ">=3.10"
dependencies = ["tqdm>=4.66"]

[project.optional-dependencies]
test = ["pytest>=8"]
bpe = ["tokenizers>=0.15"]
data = ["datasets>=2.18"]
translation = ["torch>=2.0", "datasets>=2.18", "tokenizers>=0.15", "sacrebleu>=2.4"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
